11980
It's a bit strange that at the same time:

{code:scala}

scala> final trait Foo
<console>:11: error: illegal combination of modifiers: abstract and final for: trait Foo
       final trait Foo
                   ^
{code}
